[options.entry_points]
console_scripts =
    hello_world = crazyflie_examples.hello_world:main
    nice_hover = crazyflie_examples.nice_hover:main
    figure8 = crazyflie_examples.figure8:main
    group_mask = crazyflie_examples.group_mask:main
    multi_trajectory = crazyflie_examples.multi_trajectory:main
    cmd_full_state = crazyflie_examples.cmd_full_state:main
    set_param = crazyflie_examples.set_param:main
    swap = crazyflie_examples.swap:main
    infinite_flight = crazyflie_examples.infinite_flight:main
    arming = crazyflie_examples.arming:main
    orn_cbf = crazyflie_examples.orn_cbf:main
    obstacle_publisher_from_cf = crazyflie_examples.obstacle_publisher_from_cf:main
    obstacle_fly = crazyflie_examples.obstacle_fly:main
    c3bf = crazyflie_examples.c3bf:main
    cn_cbf = crazyflie_examples.cn_cbf:main
    dho_cbf = crazyflie_examples.dho_cbf:main
