<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crazyflie_server_rs</name>
  <version>1.0.3</version>
  <description>ROS 2 Package for Bitcraze Crazyflie robots</description>
  <maintainer email="hoenig@tu-berlin.de">Wolfgang Hönig</maintainer>
  <maintainer email="kimberleymcguire@gmail.com">Kimberly N. McGuire</maintainer>
  <license>MIT</license>

  <depend>rclrs</depend>
  <depend>rosidl_runtime_rs</depend>
  <depend>example_interfaces</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
